# duneinfill

./: .gitignore  CMakeLists.txt  test_file.txt
duneinfill/: CMakeLists.txt
duneinfill/MyPduneUtils/: CMakeLists.txt  MyProtoDUNETrackUtils.cxx  MyProtoDUNETrackUtils.h
duneinfill/MyWork/: CMakeLists.txt  ExportDeadChPatternsConfig.fcl  ExportDeadChPatterns_module.cc  ExportDigitsConfig.fcl  ExportDigits_module.cc  InfillAnaTreeConfig.fcl  InfillAnaTreePIDConfig.fcl  InfillAnaTreePID_module.cc  InfillAnaTree_module.cc  InfillEvdConfig.fcl  InfillEvd_module.cc  MyPDSPAnalyzer.fcl  MyPDSPAnalyzer_module.cc  RecoAnaConfig.fcl  RecoAna_module.cc  run_InfillAnaTree.fcl  run_InfillAnaTreePID.fcl  run_InfillAnaTree_noisy_pandoracali.fcl  run_InfillAnaTree_pandora.fcl  run_InfillAnaTree_pandora2.fcl  run_InfillAnaTree_pandoracali.fcl  run_InfillEvd.fcl  run_InfillEvd_nov2019noisy.fcl
duneinfill/MyWork/run_fcls/: run_ExportDeadChPatterns.fcl  run_ExportDigits.fcl  run_InfillAnaTree_noisy_pandora2.fcl  run_InfillAnaTree_noisy_pandora2cali.fcl  run_InfillAnaTree_pandora2cali.fcl  run_InfillEvd.fcl
fcl/: channelstatus_pdsp_perfect.fcl  drop4webevd.fcl  evd_protoDUNE_refactored_infilled.fcl  protoDUNE_infill_channelsnov2019.fcl  protoDUNE_infill_channelsnov2019noisy.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsinfill.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsinfill_nodrop.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019noisy.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019noisyinfill.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019noisyinfill_nodrop.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsperfect.fcl  run_RecoAna.fcl
fcl/nov2019bad/: protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019.fcl
fcl/nov2019badnoisy/: channelstatus_pdsp_nov2019badnoisy.fcl  protoDUNE_infill_channelsnov2019noisy.fcl  protoDUNE_refactored_reco_35ms_sce_datadriven_channelsnov2019noisy.fcl
fcl/protoduneana/: CMakeLists.txt  pduneana_Prod4a_MC_sce_bad.fcl  pduneana_Prod4a_MC_sce_badnoisy.fcl  pduneana_Prod4a_MC_sce_infill.fcl  pduneana_Prod4a_MC_sce_infillprerefactor.fcl  pduneana_Prod4a_MC_sce_perfect.fcl
ups/: product_deps
